# chainsettle-contract

./: README.md  deny.toml  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  security.yml  staging.yml
contracts/chainsetttle/: Cargo.toml
contracts/chainsetttle/src/: admin.rs  benchmarks.rs  constants.rs  lib.rs  property_tests.rs  storage.rs  test.rs  test_admin.rs  test_arbiter_pool.rs  test_arbiter_security.rs  test_boundaries.rs  test_boundary_validation.rs  test_chaos.rs  test_common.rs  test_concurrent_disputes.rs  test_dispute.rs  test_errors.rs  test_features.rs  test_issues.rs  test_new_features.rs  test_oracle.rs  test_permissions.rs  test_query.rs  test_regression.rs  test_shipment.rs  test_upgrade.rs
contracts/chainsetttle/test_snapshots/test/: test_deadline_cancellation_success.1.json  test_deadline_cancellation_too_early.1.json  test_fee_bps_exceeds_max_rejected.1.json  test_fee_deducted_on_confirm_milestone.1.json  test_fee_deducted_on_dispute_resolve_approve.1.json  test_multisig_both_buyers_must_confirm.1.json  test_multisig_duplicate_approval_rejected.1.json  test_multisig_minority_veto_dispute.1.json  test_no_fee_config_backward_compatible.1.json  test_parallel_mode_allows_any_order.1.json  test_sequential_mode_allows_in_order_proof.1.json  test_sequential_mode_blocks_out_of_order_proof.1.json  test_submit_proof_after_deadline_rejected.1.json  test_submit_proof_on_deadline_ledger_allowed.1.json  test_zero_fee_bps_no_deduction.1.json
contracts/chainsetttle/tests/: test_snapshots.rs
docs/: BACKEND_INTEGRATION.md  FRONTEND_INTEGRATION.md
scripts/: smoke_test.sh
