[package]
name = "chainsetttle"
version = "0.1.0"
edition = "2021"
publish = false
description = "ChainSettle - Milestone-based supply chain escrow contract on Stellar Soroban"
authors = ["ChainSettle Team"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false


[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
proptest = "1"
