[package]
name = "chainsetttle"
version = "0.1.0"
edition = "2021"
publish = false
description = "ChainSettle - Milestone-based supply chain escrow contract on Stellar Soroban"
authors = ["ChainSettle Team"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false


[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
